# AggieCode

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-AggieCode  bazel-bin  bazel-out  bazel-testlogs  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  requirements_lock.txt  vite.bzl
.github/workflows/: backend.yml  build.yml  code-execution-service.yml  frontend.yml
.idx/: dev.nix
backend/: BUILD.bazel  PLAN.md  app.js  package-lock.json  package.json
backend/src/: app.js
backend/src/models/: redis.js
code-execution-service/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go  test_client.go
code-execution-service/cmd/test_client/: main.go
code-execution-service/executor/: BUILD.bazel  executor.go
code-execution-service/executors/cpp/: Dockerfile
code-execution-service/executors/go/: Dockerfile
code-execution-service/executors/java/: Dockerfile
code-execution-service/executors/javascript/: Dockerfile
code-execution-service/executors/python/: Dockerfile
code-execution-service/test/: maintest.go
frontend/: BUILD.bazel  README.md  index.html  jest.config.cjs  package-lock.json  package.json
frontend/public/: BUILD.bazel
frontend/src/: App.vue  BUILD.bazel  firebase.js  main.js
frontend/src/components/: CodeEditor.vue
frontend/src/router/: index.js
frontend/src/services/: oauth2.js
frontend/src/views/: Login.vue  OAuth2Callback.vue
frontend/tests/: setup.js
frontend/tests/unit/: CodeExecution.spec.js  Integration.spec.js
scripts/: start-frontend.sh
