"""AggieCode Bazel Module"""
module(
    name = "aggiecode",
    version = "0.1.0",
)

# --- Go ---
bazel_dep(name = "rules_go", version = "0.48.1") # Keeping existing, user provided 0.54.0 - need clarification if update is desired
bazel_dep(name = "gazelle", version = "0.36.0") # Keep gazelle for now

# --- Python ---
bazel_dep(name = "rules_python", version = "0.31.0") # Using latest stable, user provided 1.3.0 seems too high? Let's use a known stable one first.

# --- Skylib --- 
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# --- Packaging ---
bazel_dep(name = "rules_pkg", version = "0.9.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # Assuming Python 3.11 based on common availability. User specified 3.13, which might not be widely supported yet.
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11", # Match toolchain
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# --- Node.js / JavaScript ---
bazel_dep(name = "aspect_rules_js", version = "2.0.0") # Using latest stable, user provided 2.3.5
bazel_dep(name = "rules_nodejs", version = "6.2.0") # User provided 6.3.4 and 6.3.0, sticking with previous for now.

# Pin Node.js version via rules_nodejs extension
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "18.18.0") # Using LTS version, user specified 16.14.2
use_repo(node, "nodejs_toolchains") # Ensure toolchain is available

# Use aspect_rules_js for npm dependency management via pnpm lockfile
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm", # This repo will contain node_modules
    pnpm_lock = "//:pnpm-lock.yaml",
    data = [
        "//:package.json",
        "//frontend:package.json",
        "//backend:package.json",
    ],
    npm_package_target_name = "{name}",
    # verify_node_modules_ignored = "//:.bazelignore", # Optional: uncomment if .bazelignore is crucial
)
use_repo(npm, "npm")

# Make pnpm binary available
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
