load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "code_execution_service_lib",
    srcs = ["main.go"],
    importpath = "aggiecode.com/users/cesarmagana/documents/github/aggiecode/code-execution-service",
    visibility = ["//visibility:private"],
    deps = [
        "//code-execution-service/packages:packages",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "code-execution-service",
    embed = [":code_execution_service_lib"],
    visibility = ["//visibility:public"],
)
