load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Define frontend source files
filegroup(
    name = "frontend_srcs",
    srcs = glob([
        "index.html",
        "vite.config.js",
        "src/**/*",
        "public/**/*",
    ], allow_empty = True),
    visibility = ["//visibility:public"],
)

# Create a JavaScript script for the Vite build
write_file(
    name = "vite_build_script",
    out = "vite_build.js",
    content = [
        "const { execSync } = require('child_process');",
        "const path = require('path');",
        "const process = require('process');",
        "",
        "// Get workspace directory from env var",
        "const workspaceDir = process.env.BUILD_WORKSPACE_DIRECTORY;",
        "const frontendDir = path.join(workspaceDir, 'frontend');",
        "",
        "// Change to frontend directory and run vite build",
        "process.chdir(frontendDir);",
        "console.log('Building frontend with Vite...');",
        "execSync('npm install @guolao/vue-monaco-editor', { stdio: 'inherit' });",
        "execSync('npx vite build', { stdio: 'inherit' });",
    ],
)

# Create a JavaScript script for the Vite dev server
write_file(
    name = "vite_dev_script",
    out = "vite_dev.js",
    content = [
        "const { execSync } = require('child_process');",
        "const path = require('path');",
        "const process = require('process');",
        "",
        "// Get workspace directory from env var",
        "const workspaceDir = process.env.BUILD_WORKSPACE_DIRECTORY;",
        "const frontendDir = path.join(workspaceDir, 'frontend');",
        "",
        "// Change to frontend directory and run vite",
        "process.chdir(frontendDir);",
        "console.log('Starting Vite development server...');",
        "execSync('npm install @guolao/vue-monaco-editor', { stdio: 'inherit' });",
        "execSync('npx vite', { stdio: 'inherit' });",
    ],
)

# Build target - runs the vite build script
js_binary(
    name = "build",
    data = [
        ":frontend_srcs",
    ],
    entry_point = ":vite_build.js",
    visibility = ["//visibility:public"],
)

# Development server target - runs the vite dev script
js_binary(
    name = "dev",
    data = [
        ":frontend_srcs",
    ],
    entry_point = ":vite_dev.js",
    visibility = ["//visibility:public"],
)

# Create a placeholder dist file
write_file(
    name = "placeholder_dist",
    out = "placeholder.txt",
    content = ["This file is a placeholder for the dist directory."],
)

# Create a package for distribution
pkg_tar(
    name = "dist_tar",
    srcs = [":placeholder_dist"],
    package_dir = "dist",
    visibility = ["//visibility:public"],
)
